// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account Reducer selectCompanyFees when company has 1 installments should return the correct response 1`] = `
Object {
  "anticipation": 3.14,
  "antifraud": 70,
  "boleto": 380,
  "gateway": 50,
  "installments": Array [
    Object {
      "installment": 1,
      "mdr": 3.79,
    },
  ],
  "transfer": 367,
}
`;

exports[`Account Reducer selectCompanyFees when company has 1, 2 and 7 installments and payment_method is null should return the correct response 1`] = `
Object {
  "anticipation": 3.14,
  "antifraud": 70,
  "boleto": 380,
  "gateway": 50,
  "installments": Array [
    Object {
      "installment": 1,
      "mdr": 3.79,
    },
    Object {
      "installment": 2,
      "mdr": 4.19,
    },
    Object {
      "installment": 7,
      "mdr": 4.59,
    },
  ],
  "transfer": 367,
}
`;

exports[`Account Reducer selectCompanyFees when company has 1, 2 and 7 installments should return the correct response 1`] = `
Object {
  "anticipation": 3.14,
  "antifraud": 70,
  "boleto": 380,
  "gateway": 50,
  "installments": Array [
    Object {
      "installment": 1,
      "mdr": 3.79,
    },
    Object {
      "installment": 2,
      "mdr": 4.19,
    },
    Object {
      "installment": 7,
      "mdr": 4.59,
    },
  ],
  "transfer": 367,
}
`;

exports[`Account Reducer selectCompanyFees when company has other installments types should return the correct response 1`] = `
Object {
  "anticipation": 3.14,
  "antifraud": 70,
  "boleto": 380,
  "gateway": 50,
  "installments": Array [],
  "transfer": 367,
}
`;
